# ncsdl

./: .gitignore  README.md  audit_patterns.py  generate_names.py  ncsdl.py  pattern_audit.json  pyproject.toml  requirements.txt  run_tests.sh
ncsdl/: __init__.py  __main__.py  cli.py  downloader.py  logger.py  metadata.py  styles.py
ncsdl/cmd/: __init__.py  _shared.py  analyze.py  check_dupes.py  count.py  detect_genres.py  download.py  list_genres.py  metadata.py  migrate.py  rename.py  resume.py  search.py  stats.py
ncsdl/downloader/: __init__.py  download.py  files.py  migration.py  queue.py  renamer.py  search.py  track.py
tests/: test_cli_smoke.py  test_migration_logic.py  test_renamer_logic.py
